work with ceilings app

--- a/ceilings/templates/ceilings/ceiling_item.html
+++ b/ceilings/templates/ceilings/ceiling_item.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load core_tags %}
+{% load ceilings_tags %}
 {% load flatblocks %}
 {% load cropping %}
 
@@ -7,17 +7,17 @@
 {% block breadcrumbs %}
 	<!--  :::  BREADCRUMBS ::: -->
 	<section class="breadcrumbs breadcrumbs2 servicesBG wow fadeInDown" data-wow-duration="0.25s" data-wow-delay="0.45s">
-	  <div class="boxedeb">
-	    <div class="container page-block-small">
-	      <div class="col-md-12 col-sm-12 col-xs-12">
-	          <h2>Services</h2>
-	          <span class="line"></span>
-	        <div class="rightText">
-	            <a href="index.html" title="Home">Home</a> / <a href="services.html" title="Services">Services</a> / Commercial Interior Design
-	        </div>
-	      </div>
-	    </div><!--end-container-->
-	  </div>
+		<div class="boxedeb">
+			<div class="container page-block-small">
+				<div class="col-md-12 col-sm-12 col-xs-12">
+					<h2>{{ ceiling.name }}</h2>
+					<span class="line"></span>
+					<div class="rightText">
+						<a href="index.html" title="Home">Home</a> / <a href="services.html" title="Services">Services</a> / Commercial Interior Design
+					</div>
+				</div>
+			</div><!--end-container-->
+		</div>
 	</section>
 	<!-- ::: END ::: -->
 {% endblock breadcrumbs %}
@@ -25,83 +25,77 @@
 
 {% block content %}
 	<section id="services-single" class="page-block-large">
+		<div class="container">
 
-  	<!-- NAVIGATION FOR PREV / NEXT ITEM -->
-    <div class="absShape navigation">
-        <a href="services-single-4.html" title="Previous"><i class="fa fa-angle-left square BGsec"></i></a>
-        <a href="services-single-2.html" title="Next"><i class="fa fa-angle-right square BGsec"></i></a>
-    </div>
+			<!-- start SIDEBAR -->
+			<div class="sidebar">
+				<div class="col-md-4 col-sm-4 col-xs-12 text-center wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="1s">
+					<div class="gapM"></div>
+						<ul class="social list-inline">
+							<li><a class="fb" href="team-single.html#" title="Follow Us on Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a class="tw" href="team-single.html#" title="Follow Us on Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a class="yt" href="team-single.html#" title="Watch Our Videos"><i class="fa fa-youtube-play"></i></a></li>
+							<li><a class="li" href="team-single.html#" title="Follow Us on LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+							<li><a class="gplus" href="team-single.html#" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
+							<li><a class="vk" href="team-single.html#" title="Follow Us on vk"><i class="fa fa-vk"></i></a></li>
+						</ul>
 
-  	<div class="container">
+					{% catalog_list request %}
 
-      <div class="col-md-3 col-sm-4 col-xs-12 text-center wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.50s">
-         <!-- Widget start -->
-        {% sidebar request %}
-      </div><!-- end col-md-4 -->
+				</div><!-- end col-md-4 -->
+			</div>
+			<!-- end SIDEBAR -->
 
-      <div class="col-md-9 col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.75s">
-      	<h1 class="big"><strong>Commercial</strong>Interior design</h1>
-        <div class="smallSlider">
-        	<ul class="bxslider">
-              <li>
-                <img class="img-responsive" src="images/project/01/slider/01.jpg" width="725" height="475" alt="Project Name" />
-              </li>
-              <li>
-                 <img class="img-responsive" src="images/project/01/slider/02.jpg" width="725" height="475" alt="Project Name" />
-              </li>
-              <li>
-                <img class="img-responsive" src="images/project/01/slider/03.jpg" width="725" height="475" alt="Project Name" />
-              </li>
+			<div class="col-md-8 col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.75s">
+				<h1 class="big">
+				 {% for word in ceiling.split_name %}
+						{% if forloop.first %}
+							<strong>{{ word }}</strong>
+						{% else %}{{ word }} {% endif %}
+					{% endfor %}
+				</h1>
 
-              <li>
-                <img class="img-responsive" src="images/project/01/slider/04.jpg" width="725" height="475" alt="Project Name" />
-              </li>
-            </ul>
-        </div>
-        <br>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus commodo purus quis urna vehicula ultricies. Ut tincidunt est vitae justo feugiat, quis mollis nisi consectetur. Phasellus vel tempor sapien. Ut scelerisque enim a susccilisis. Sed congue faucibus porta. Morbi sit amet purus erat. Cras urna nisl, porta  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus commodo purus quis urna vehicula ultricies. Ut tincidunt est vitae justo feugiat, quis mollis nisi consectetur. </p>
+				<div class="price">{{ ceiling.price }} руб/м²</div>
+				<div class="smallSlider">
+					<ul class="bxslider">
+						{% for image in ceiling.get_all_images %}
+							<li>
+								<img class="img-responsive" src="{{ image.get_url }}" width="725" height="475" alt="Project Name" />
+							</li>
+						{% endfor %}
+					</ul>
+				</div>
+				<br>
 
-         <div class="gapS"></div>
+				{{ ceiling.text|safe }}
 
-         <h4>Lorem ipsum dolor sit amet</h4>
-         <span class="line"></span>
-         <ul class="list-default">
-            <li>Anim pariatur cliche reprehenderit, </li>
-            <li>enim eiusmod high life accusamus terry richardson ad squi</li>
-            <li>moon officia aute, non cupidatat skateboard dolor brunch  </li>
-            <li>Brunch 3 wolf moon tempor, sunt aliqua put a bird o</li>
-            <li>n it squid single-origin coffee nulla assumenda shoredit</li>
-          </ul>
+			 	<h2 class="prime text-capitalize">Отправить заявку</h2>
+				<p>Оставьте заявку и время в которое Вам будет удобно принять звонок и мы Вам перезвоним.</p>
+				<form id="contact_form" method="post" action="http://dezinethemes.com/envato/striking/200/01/09/form/contact.php">
+					<div class="field-wrapper row">
+						<div class="col-md-6">
+							<input type="text" class="form-control" id="name" name="name" placeholder="Your Name" />
+						</div>
+						<div class="col-md-6">
+							<input type="tel" class="form-control" id="phone" name="phone" placeholder="Your Phone" />
+						</div>
+						<div class="col-md-6">
+							<input type="email" class="form-control" id="email" name="email" placeholder="Your Email" />
+						</div>
+						<div class="col-md-6">
+							<input type="text" class="form-control" value="" id="datetimepicker" name="datetimepicker" placeholder="Preffered Date & Time" />
+						</div>
+						<div class="col-md-12 col-sm-12 col-xs-12">
+							<textarea cols="60" rows="3" id="comment" name="comment" class="form-control" placeholder="Write your comment here..."></textarea>
+						</div>
+						<div class="col-md-1">
+							<input type="text" id="security" name="security" class="form-control hide" value="" />
+							<input type="submit" value="Submit &#xf138;" class="btn btn-primary btn-lg" id="submit" name="submit" />
+						</div>
+					</div>
+				</form>
+			</div><!-- end col-md-4 -->
 
-          <div class="gapM"></div>
-
-           <h2 class="prime text-capitalize">Book Appointment</h2>
-          <p>Fill up form below for appointment and our expert will contaxct you soon. All fields are required.</p>
-          <form id="contact_form" method="post" action="http://dezinethemes.com/envato/striking/200/01/09/form/contact.php">
-            <div class="field-wrapper row">
-                <div class="col-md-6">
-                  <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" />
-                </div>
-                <div class="col-md-6">
-                  <input type="tel" class="form-control" id="phone" name="phone" placeholder="Your Phone" />
-                </div>
-                <div class="col-md-6">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" />
-                </div>
-                <div class="col-md-6">
-                    <input type="text" class="form-control" value="" id="datetimepicker" name="datetimepicker" placeholder="Preffered Date & Time" />
-                </div>
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                  <textarea cols="60" rows="3" id="comment" name="comment" class="form-control" placeholder="Write your comment here..."></textarea>
-                </div>
-                <div class="col-md-1">
-                    <input type="text" id="security" name="security" class="form-control hide" value="" />
-                    <input type="submit" value="Submit &#xf138;" class="btn btn-primary btn-lg" id="submit" name="submit" />
-                </div>
-            </div>
-          </form>
-      </div><!-- end col-md-4 -->
-
-   </div><!-- end container -->
+	 </div><!-- end container -->
 </section>
 {% endblock content %}
