--- a/ceilings/templates/ceilings/ceiling_list.html
+++ b/ceilings/templates/ceilings/ceiling_list.html
@@ -4,6 +4,25 @@
 {% load cropping %}
 
 
+{% block breadcrumbs %}
+	<!--  :::  BREADCRUMBS ::: -->
+	<section class="breadcrumbs breadcrumbs2 servicesBG wow fadeInDown" data-wow-duration="0.25s" data-wow-delay="0.45s">
+		<div class="boxedeb">
+			<div class="container page-block-small">
+				<div class="col-md-12 col-sm-12 col-xs-12">
+						<h2>Каталог натяжных потолков</h2>
+						<span class="line"></span>
+					<div class="rightText">
+							<a href="index.html" title="Home">Home</a> / <a href="services.html" title="Services">Services</a> / Commercial Interior Design
+					</div>
+				</div>
+			</div><!--end-container-->
+		</div>
+	</section>
+	<!-- ::: END ::: -->
+{% endblock breadcrumbs %}
+
+
 {% block content %}
 <section id="ceiling-list" class="member-info page-block-large">
 	<div class="container">
@@ -34,21 +53,14 @@
 			</h1>
 			<div class="meta-data BGlight row">
 				<div class="col-md-4 col-sm-12">
-					Founder
+					Натяжные потолки
 				</div>
 				<div class="text-right col-md-8 col-sm-12">
-					<strong>150</strong> Projects Done <span>|</span> <strong>07</strong> Projects In Hand
+					<strong>150</strong> Потолков установлено <span>|</span> <strong>03</strong> Проекта в работе
 				</div>
 			</div>
 
 			<div class="clear"></div>
-
-			<blockquote>
-				<i class="fa fa-quote-left fa-4x"></i>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus commodo purus quis urna vehicula ultricies. Ut tincidunt est vitae justo Phasellus vel tempor sapien.
-			</blockquote>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus commodo purus quis urna vehicula ultricies. Ut tincidunt est vitae justo feugiat, quis mollis nisi consectetur. Phasellus vel tempor sapien. Ut scelerisque enim a susccilisis. Sed congue faucibus porta. Morbi sit amet purus erat. Cras urna nisl, porta  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus commodo purus quis urna vehicula ultricies. Ut tincidunt est vitae justo feugiat, quis mollis nisi consectetur. </p>
 
 			<!--  :::  PROMO BOX ::: -->
 			<section class="promoBox">
@@ -56,9 +68,9 @@
 					<div class="row">
 
 						{% for ceiling in ceilings %}
-					    <div
-					    	class="col-md-6 {% cycle 'commercial' 'residential' %}"
-					    	style="background: url({{ ceiling.get_image_url }}) no-repeat center center;">
+							<div
+								class="col-md-6 {% cycle 'commercial' 'residential' %}"
+								style="background: url({{ ceiling.get_image_url }}) no-repeat center center;">
 								<div class="absShape {% cycle 'BGprime' 'BGsec' %} opaque">
 									<div class="info">
 											<h3>{{ ceiling.name }}</h3>
@@ -66,7 +78,7 @@
 											<p>{{ ceiling.preview_text|truncatechars:100|safe }}</p>
 									</div>
 								</div>
-								<a href="portfolio1.html" title=""><i class="fa fa-link square BGdark"></i></a>
+								<a href="{{ ceiling.get_url }}" title=""><i class="fa fa-link square BGdark">подробнее</i></a>
 							</div>
 						{% endfor %}
 
@@ -74,28 +86,6 @@
 				</div><!-- end container -->
 			</section>
 			<!-- ::: END ::: -->
-
-			<div class="gapS"></div>
-
-			<h4>Skills</h4>
-			<span class="line"></span>
-			<ul class="list-default">
-				<li>Anim pariatur cliche reprehenderit, </li>
-				<li>enim eiusmod high life accusamus terry richardson ad squi</li>
-				<li>moon officia aute, non cupidatat skateboard dolor brunch  </li>
-				<li>Brunch 3 wolf moon tempor, sunt aliqua put a bird o</li>
-				<li>n it squid single-origin coffee nulla assumenda shoredit</li>
-			</ul>
-
-			<div class="gapS"></div>
-
-			<h4>Qualification</h4>
-			<span class="line"></span>
-			<ul class="list-main bordered bigIcon">
-				<li><h5>Masters Degree in Interior Designer</h5>Awesome University </li>
-				<li><h5>Bachelors Degree in VFX</h5>Awesome University </li>
-				<li><h5>Bachelors Degree in Computer</h5>Awesome University </li>
-			</ul>
 		</div><!-- end col-md-4 -->
 
 	 </div><!-- end container -->
