--- a/core/templates/core/post_list.html
+++ b/core/templates/core/post_list.html
@@ -4,6 +4,25 @@
 {% load cropping %}
 
 
+{% block breadcrumbs %}
+    <!--  :::  BREADCRUMBS ::: -->
+    <section class="breadcrumbs breadcrumbs2 servicesBG wow fadeInDown" data-wow-duration="0.25s" data-wow-delay="0.45s">
+        <div class="boxedeb">
+            <div class="container page-block-small">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h2>Статьи</h2>
+                    <span class="line"></span>
+                    <div class="rightText">
+                        <a href="index.html" title="Home">Home</a> / <a href="services.html" title="Services">Services</a> / Commercial Interior Design
+                    </div>
+                </div>
+            </div><!--end-container-->
+        </div>
+    </section>
+    <!-- ::: END ::: -->
+{% endblock breadcrumbs %}
+
+
 {% block content %}
 <div class="section page-block-large">
     <div class="">
