--- a/project/static/joyus/css/develop.css
+++ b/project/static/joyus/css/develop.css
@@ -89,6 +89,51 @@ color: #E54B49;
     font-size: 3em;
     margin: 0;
 }
+.tip-potolka.item {
+    padding: 0 15px;
+}
+#owl-recent-project-2 .BGprime {
+    font-size: 16px;
+    width: 1.6em;
+    height: 2.1em;
+    background-color: #eeae1e;
+}
+#owl-recent-project-2:hover .owl-prev,
+#owl-recent-project-2:hover .owl-next{
+    opacity: 1;
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    -ms-transition: all 0.25s ease-in-out;
+    -o-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
+
+}
+#owl-recent-project-2:hover .owl-prev{
+    left: -20px;
+}
+#owl-recent-project-2:hover .owl-next{
+    right: -25px;
+}
+#owl-recent-project-2 .owl-next {
+    right: 0;
+    position: absolute;
+    top: 30%;
+    background: none!important;
+    padding: 0!important;
+}
+#owl-recent-project-2 .owl-prev {
+    left: 0;
+    position: absolute;
+    top: 30%;
+    background: none!important;
+    padding: 0!important;
+}
+#owl-recent-project-2 .owl-prev,#owl-recent-project-2 .owl-next{
+    opacity: 0;
+}
+.recent-project ul.bxslider li .project-data strong {
+    margin-right: 10px;
+}
 .zoom-gallery a::before,.popup-gallery a::before{
     position: absolute;
     content: "\f00e";
