--- a/siteprojects/templates/siteprojects/project_list.html
+++ b/siteprojects/templates/siteprojects/project_list.html
@@ -1,20 +1,37 @@
 {% extends "base.html" %}
 
+{% block breadcrumbs %}
+    <!--  :::  BREADCRUMBS ::: -->
+    <section class="breadcrumbs breadcrumbs2 servicesBG wow fadeInDown" data-wow-duration="0.25s" data-wow-delay="0.45s">
+        <div class="boxedeb">
+            <div class="container page-block-small">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h1>Наши работы</h1>
+                    <span class="line"></span>
+                    <div class="rightText">
+                        <a href="index.html" title="Home">Главная</a> / <a href="services.html" title="Services">Services</a> / Commercial Interior Design
+                    </div>
+                </div>
+            </div><!--end-container-->
+        </div>
+    </section>
+    <!-- ::: END ::: -->
+{% endblock breadcrumbs %}
 {% block content %}
+
 <section class="project-gallery page-block-large">
 	<div class="container"> 
 		
 		<div class="filter-button-group button-group text-center">
-			<button class="btn btn-dark active" data-filter="*">All</button>
-			<button class="btn btn-dark" data-filter=".com">Commercial</button>
-			<button class="btn btn-dark" data-filter=".res">Residential</button>
-			<button class="btn btn-dark" data-filter=".ext">Exterior</button>
-			<button class="btn btn-dark" data-filter=".ren">Renovation</button>
+			<button class="btn btn-dark active" data-filter="*">Все</button>
+			{% for filter in filters %}
+				<button class="btn btn-dark" data-filter=".{{ filter.slug }}">{{ filter.name }}</button>
+			{% endfor %}
 		</div>
 			<div class="grid four">
 
 				{% for project in projects %}
-					<div class="item com popup-gallery">
+					<div class="item {{ project.filters_to_str }} popup-gallery">
 						<a href="{{ project.get_image.get_url }}">
 							<img class="img-responsive" src="{{ project.get_image.get_url }}" width="300" height="300" alt="" />
 							<div class="overlay hasBoth"></div>
