work with ceilings app

--- a/ceilings/templates/ceilings/ceiling_item.html
+++ b/ceilings/templates/ceilings/ceiling_item.html
@@ -70,27 +70,18 @@
 				{{ ceiling.text|safe }}
 
 			 	<h2 class="prime text-capitalize">Отправить заявку</h2>
-				<p>Оставьте заявку и время в которое Вам будет удобно принять звонок и мы Вам перезвоним.</p>
-				<form id="contact_form" method="post" action="http://dezinethemes.com/envato/striking/200/01/09/form/contact.php">
+				<p>Оставьте Ваши данные и мы Вам перезвоним в течении 5 минут.</p>
+
+				<form id="contact_form" method="post" action="/contact-form/">{% csrf_token %}
 					<div class="field-wrapper row">
 						<div class="col-md-6">
-							<input type="text" class="form-control" id="name" name="name" placeholder="Your Name" />
+							{{ form.name }}
 						</div>
 						<div class="col-md-6">
-							<input type="tel" class="form-control" id="phone" name="phone" placeholder="Your Phone" />
-						</div>
-						<div class="col-md-6">
-							<input type="email" class="form-control" id="email" name="email" placeholder="Your Email" />
-						</div>
-						<div class="col-md-6">
-							<input type="text" class="form-control" value="" id="datetimepicker" name="datetimepicker" placeholder="Preffered Date & Time" />
-						</div>
-						<div class="col-md-12 col-sm-12 col-xs-12">
-							<textarea cols="60" rows="3" id="comment" name="comment" class="form-control" placeholder="Write your comment here..."></textarea>
+							{{ form.phone }}
 						</div>
 						<div class="col-md-1">
-							<input type="text" id="security" name="security" class="form-control hide" value="" />
-							<input type="submit" value="Submit &#xf138;" class="btn btn-primary btn-lg" id="submit" name="submit" />
+							<input type="submit" class="btn btn-primary btn-lg" id="submit" name="submit" />
 						</div>
 					</div>
 				</form>
