--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -445,9 +445,9 @@
 		<div class="boxedw page-block">
 			<div class="container">
 				<div class="widget wow fadeInLeft" data-wow-duration="0.30s" data-wow-delay="0.30s">
-						<h2>Get A Quote<small>With Experts Advice</small></h2>
-						<p>Lorem ipsu Pellentesque dolor sit amet, consectetur adipiscing elit. Integer gravida velit quis dolor tristique </p>
-						<a class="btn btn-primary" href="/static/joyus/contact1.html" title="Get A Quote">Get A Quote <i class="fa fa-chevron-circle-right"></i></a>
+						<h2>Калькулятор<small>Расчитайте стоимость своего потолка</small></h2>
+						<p>Внесите параметры своего потолка и мы расчитаем Вам точную стоимость.</p>
+						<a class="btn btn-primary" href="/static/joyus/contact1.html" title="Расчитать">Расчитать<i class="fa fa-calculator"></i></a>
 						<i class="fa fa-file opaque"></i>
 				</div>
 				<div class="widget wow fadeInRight" data-wow-duration="0.30s" data-wow-delay="0.30s">
@@ -459,7 +459,7 @@
 							 <input type="submit" id="sub-submit" name="sub-submit" value="Subscribe &#xf138;" class="btn btn-primary" />
 						</div>
 					</form>
-					<i class="fa fa-envelope opaque"></i>
+					<i class="fa fa-volume-control-phone"></i>
 				</div>
 			</div><!-- end container -->
 		</div> <!-- end boxedw -->
