--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -448,7 +448,7 @@
 						<h2>Калькулятор<small>Расчитайте стоимость своего потолка</small></h2>
 						<p>Внесите параметры своего потолка и мы расчитаем Вам точную стоимость.</p>
 						<a class="btn btn-primary" href="/static/joyus/contact1.html" title="Расчитать">Расчитать<i class="fa fa-calculator"></i></a>
-						<i class="fa fa-file opaque"></i>
+						<i class="fa fa-calculator"></i>
 				</div>
 				<div class="widget wow fadeInRight" data-wow-duration="0.30s" data-wow-delay="0.30s">
 					<h2>Subscribe<small>to Enewsletter</small></h2>
